<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="160dp"
        android:layout_height="140dp"
        android:layout_marginHorizontal="0sp"
        android:layout_marginVertical="35sp"
        android:src="@drawable/user"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.12" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="240dp"
        android:layout_height="53dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/tags"
        android:text="@string/ProfSett"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.076"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="413dp"
        android:layout_height="270dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.51">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginHorizontal="8dp"
            android:text="Personal Data"
            android:textSize="30dp"></TextView>


        <EditText
            android:id="@+id/setName"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:hint="Enter name"
            android:inputType="textPersonName"
            android:maxLength="10"
            android:textSize="25dp" />

        <EditText
            android:id="@+id/setClass"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:hint="Enter class"
            android:inputType="number"
            android:maxLength="2"
            android:textSize="25dp" />


        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginHorizontal="30dp"
            android:text="Remember me" />

        <Button
            android:id="@+id/saveData"
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="200dp"
            android:text="@string/Save" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="410dp"
        android:layout_height="80dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginVertical="13dp"
            android:layout_weight="1"
            android:background="@color/purple_500"
            android:clickable="true"
            android:onClick="News"
            android:contentDescription="@string/News"
            android:src="@android:drawable/ic_dialog_info"></ImageButton>

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginVertical="13dp"
            android:layout_weight="1"
            android:background="@color/purple_500"
            android:clickable="true"
            android:onClick="Education"
            android:contentDescription="@string/Educ"
            android:src="@android:drawable/ic_dialog_map"></ImageButton>

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginVertical="13dp"
            android:layout_weight="1"
            android:background="@color/purple_500"
            android:clickable="true"
            android:onClick="Collection"
            android:contentDescription="@string/Coll"
            android:src="@android:drawable/ic_dialog_dialer"></ImageButton>

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginVertical="13dp"
            android:layout_weight="1"
            android:background="@color/purple_200"
            android:clickable="true"
            android:onClick="Profile"
            android:contentDescription="@string/Prof"
            android:src="@android:drawable/ic_dialog_alert"></ImageButton>
    </LinearLayout>

    <Button
        android:id="@+id/button4"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="205dp"
        android:text="@string/ChangeA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>