<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="160dp"
        android:layout_height="140dp"
        android:layout_marginHorizontal="0sp"
        android:layout_marginVertical="35sp"
        android:src="@drawable/user"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.12" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="240dp"
        android:layout_height="53dp"
        android:layout_marginTop="44dp"
        android:text="@string/ProfSett"
        android:background="@drawable/tags"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:layout_width="413dp"
        android:layout_height="190dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginHorizontal="8dp"
            android:text="Personal "
            android:textSize="30dp"></TextView>

        <TextView
            android:id="@+id/getName"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_marginHorizontal="20dp"
            android:hint="@string/Name"
            android:textSize="25dp" />

        <TextView
            android:id="@+id/getClass"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_marginHorizontal="20dp"
            android:hint="@string/Class"
            android:textSize="25dp" />


        <Button
            android:id="@+id/Change"
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="200dp"
            android:text="Change" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="410dp"
        android:layout_height="80dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginVertical="13dp"
            android:layout_weight="1"
            android:background="@color/purple_500"
            android:clickable="true"
            android:onClick="News"
            android:src="@android:drawable/ic_dialog_info"></ImageButton>

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginVertical="13dp"
            android:layout_weight="1"
            android:background="@color/purple_500"
            android:clickable="true"
            android:onClick="Education"
            android:src="@android:drawable/ic_dialog_map"></ImageButton>

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginVertical="13dp"
            android:layout_weight="1"
            android:background="@color/purple_500"
            android:clickable="true"
            android:onClick="Collection"
            android:src="@android:drawable/ic_dialog_dialer"></ImageButton>

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginVertical="13dp"
            android:layout_weight="1"
            android:background="@color/purple_200"
            android:clickable="true"
            android:onClick="Profile"
            android:src="@android:drawable/ic_dialog_alert"></ImageButton>
    </LinearLayout>

    <Button
        android:id="@+id/button4"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="205dp"
        android:text="@string/ChangeA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>